--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,3 +1,9 @@
 // Variables
 
 $primary: #42DCA3;
+$background: #000000;
+$gray-medium: #949494;
+$gray-dark: #222222;
+$width-small: 768px;
+$width-medium: 992px;
+$width-large: 1200px;
