--- a/sass/grayscale.scss
+++ b/sass/grayscale.scss
@@ -148,7 +148,7 @@ a {
     padding: 100px 0;
     text-align: center;
     color: white;
-    background-image: url(../img/Banner.jpg);
+    background-image: url(../img/banner.jpg);
     background-color: black;
     background-position: 20% center;
     background-repeat: no-repeat;
