--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -6,7 +6,7 @@
 body {
   width: 100%;
   height: 100%;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Helvetica Neue",Helvetica,Arial,"PingFang SC","Microsoft YaHei",sans-serif;
   color: white;
   background-color: #000000;
   font-weight: 200; }
@@ -23,7 +23,7 @@ h5,
 h6 {
   margin: 0 0 35px;
   text-transform: uppercase;
-  font-family: "Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Segoe UI","Helvetica Neue",Helvetica,Arial,"PingFang SC","Microsoft YaHei",sans-serif;
   font-weight: 200;
   letter-spacing: 1px; }
 
@@ -62,7 +62,7 @@ a {
   margin-bottom: 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
   text-transform: uppercase;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Segoe UI","Helvetica Neue",Helvetica,Arial,"PingFang SC","Microsoft YaHei",sans-serif;
   background-color: #000000; }
   .navbar-custom .navbar-toggle {
     padding: 4px 6px;
@@ -287,7 +287,7 @@ a {
 
 .btn {
   text-transform: uppercase;
-  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Segoe UI","Helvetica Neue",Helvetica,Arial,"PingFang SC","Microsoft YaHei",sans-serif;
   font-weight: 400;
   -webkit-transition: all .3s ease-in-out;
   -moz-transition: all .3s ease-in-out;
