--- a/sass/grayscale.scss
+++ b/sass/grayscale.scss
@@ -4,7 +4,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Helvetica Neue",Helvetica,Arial,"PingFang SC","Microsoft YaHei",sans-serif;
     color: white;
     background-color: $background;
     font-weight: 200;
@@ -23,7 +23,7 @@ h5,
 h6 {
     margin: 0 0 35px;
     text-transform: uppercase;
-    font-family: "Segoe UI","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Segoe UI","Helvetica Neue",Helvetica,Arial,"PingFang SC","Microsoft YaHei",sans-serif;
     font-weight: 200;
     letter-spacing: 1px;
 }
@@ -69,7 +69,7 @@ a {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(white, 0.3);
     text-transform: uppercase;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Segoe UI","Helvetica Neue",Helvetica,Arial,"PingFang SC","Microsoft YaHei",sans-serif;
     background-color: $background;
     .navbar-toggle {
         padding: 4px 6px;
@@ -352,7 +352,7 @@ a {
 
 .btn {
     text-transform: uppercase;
-    font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Segoe UI","Helvetica Neue",Helvetica,Arial,"PingFang SC","Microsoft YaHei",sans-serif;
     font-weight: 400;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
